Lade till favoriter/watchlist-knappar i detailspage och ändrade syntaxen för aria-label och title. Ordnade så att footer är längst ned oberoende av content mängd och spegelvände strecket, ändrade så att searchknappen inte navigerar någonstans om man inte skrivit in mer än 2 bokstäver, fixat så att sidan inte knuffas när scrollbar dyker upp

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -20,12 +20,12 @@
 }
 
 .footer-section__title::after {
-    background: linear-gradient(359deg, var(--yellow) 40%, var(--blackish) 50%);
-    height: .5rem;
-    width: 100%;
+    background: linear-gradient(179deg, var(--yellow) 40%, var(--blackish) 50%);
+    height: .3rem;
+    width: 110%;
     content: "";
     margin-top: 2px;
-    rotate: 4deg;
+    rotate: -1deg;
 }
 
 .footer-btn {
