--- a/src/pages/detailsPage/detailsPage.css
+++ b/src/pages/detailsPage/detailsPage.css
@@ -23,7 +23,55 @@
     margin-top: 1rem;
 }
 
+.poster-wrapper {
+    position: relative;
+}
+
 .poster {
     max-width: 300px;
     aspect-ratio: 2/3;
+}
+
+.poster-button {
+    all: unset;
+    aspect-ratio: 1;
+    width: 45px;
+    background-color: var(--yellow);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    position: absolute;
+    cursor: pointer;
+    background-color: transparent;
+    transition: all .2s ease-in-out;
+}
+
+.poster-button:hover{
+    scale: 1.1;
+}
+
+.poster-button--in-favorites {
+    background-image: url(../../assets/filled-heart.svg);
+    top: 5%;
+    left: 22%;
+    transform: rotateY(180deg);
+}
+
+.poster-button--add-to-favorites{
+    background-image: url(../../assets/not-filled-heart.svg);
+    top: 5%;
+    left: 22%;
+}
+
+.poster-button--in-watchlist{
+    top: 5%;
+    left: 3%;
+    background-image: url(../../assets/in-watchlist.svg);
+    transform: rotateY(180deg);
+}
+
+.poster-button--add-to-watchlist{
+    top: 5%;
+    left: 3%;
+    background-image: url(../../assets/add-to-watchlist.svg);
 }
